nav at the bottom

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 		.vertical header{
 			position: sticky;
 			top:4.6rem;
-			height:calc(100svh - 4.6rem - 2rem);
-			margin-bottom: calc((100svh - 4.6rem - 2rem) * -1);
+			height:calc(100dvh - 4.6rem - 2rem);
+			margin-bottom: calc((100dvh - 4.6rem - 2rem) * -1);
 /*			background-color: #fff;*/
 		}
 
