--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				display: flex;
 				gap:0.2rem;
 				justify-content: space-between;
-				background-color: transparent;
+/*				background-color: transparent;*/
 			}
 		}
 
